--- a/index.qmd
+++ b/index.qmd
@@ -27,15 +27,27 @@ Nikola Grubor is a Ph.D. student of Medical Statistics and Bioinformatics at the
 
 ## Education
 
--   **Ph.D. Student (Medical Statistics and Bioinformatics)** \
+-   **Ph.D. Student (Medical Statistics and Bioinformatics)**\
     Institute for Statistics and Bioinformatics \| Nov 2022 --- Present\
     University of Belgrade Medical School
+
+-   **Advanced Teaching Skills**\
+    Harvard Medical School Postgraduate Medical Education \| Jun 2023 \
+    Brigham and Women's Hospital
+
+-   **Regenerative Medicine and Surgery, Fundamentals & Advanced Courses**\
+    Mayo Clinic School of Medicine \| Feb 2022 & Jun 2022
 
 -   **Doctor of Medicine -- M.D.**\
     University of Belgrade Medical School \| 2015 --- 2022
 
 ## Experience
 
-Wengo Analytics \| Head Data Scientist \| April 2018 - present
+-   **Clinical Research**\
+    Clinic for Digestive Surgery (First Surgical Clinic), University Clinical Center of Serbia \| Nov 2022 --- Present
 
-GeoScynce \| Chief Analyst \| Spet 2012 - April 2018
+-   **Clinical Internship**\
+    University Clinical Center of Serbia \| Sept 2022 --- Mar 2023
+
+-   **Social media Marketing Intern**\
+    DEFINE Digital \| Sept 2021 --- Oct 2021
