--- a/myblog/posts/sr/kauzalno-zakljucivanje/index.qmd
+++ b/myblog/posts/sr/kauzalno-zakljucivanje/index.qmd
@@ -14,6 +14,8 @@ citation: true
 bibliography: biblio.bib
 categories: [statistika, srpski]
 image: ""
+mermaid: 
+  theme: forest
 draft: true
 ---
 
@@ -21,13 +23,20 @@ draft: true
 -   [ ] Napisi sta je treca varijabla
 -   [ ] ...
 
+# Kletva korelacija
+
+- [ ] Can doctors fix a radio
+- [ ] Plague of association and correlation
+
 # Šta je kauzalno zaključivanje?
 
 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 
 Objašnjenje regresije: Francis Galton je otkrio regresionu liniju. Interpolira najbolju liniju kroz oblak podataka. Intervention ($X$) i ishod ($Y$), jednačina bi izgledala: $Y = aX + b$. Jedna jedicina povećanja X će, u proseku, povećati Y za a-jedinica. Ako nema nikakvih konfoundera onda je to procena naše intervencije. Onda a daje prosečan trend, sto je korelacija, a ne kauzalni efekat. Ako imamo konfaunder Z. Onda X, Y, Z prave "oblak" u 3D prostoru, i naša regresiona linija postaje ravan $Y = aX + bZ + c$. Ono sto koeficijent a onda predstavlja je parcijalni regresioni koeficijent, "adjusted" za Z. Sve što treba da uradimo je da izračunamo ravan [@pearl2018].
 
-::: callout-warning
+do-Račun omogućava konstrukciju dokaza, ali ne pomaže da se dokaz pronađe.
+
+::: { .callout-warning}
 Ponekad regresioni koeficijenti predstavljaju kauzalne efekte, a ponekad ne. Sve zavisi od kauzalnog dijagrama!
 :::
 
@@ -37,31 +46,134 @@ Kauzalni dijagram treba oslikava moguću realnost.
 
 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
 
-# Usmereni, aciklični grafikoni
+# Usmereni, aciklični dijagrami
 
 ```{mermaid}
+%%| label: fig-backdoor
+%%| fig-cap: "Something."
 
 flowchart LR
-  A[Hard edge] --> B(Round edge)
-  B --> C{Decision}
-  C --> D[Result one]
-  C --> E[Result two]
+  Z((Pol)) -.-> X & Y
+  X((Lek)) ==> Y((Infarkt))
   
 ```
 
 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
 
-::: callout-note
-**Backdoor Kriterijum.** Pravilo o pronalaženju skupa varijabli za stratifikaciju kako bi dobili $P(Y|do(X))$. Može se upotrebiti kada se dijagram analizira vizuelno.
+## Backdoor Kriterijum
 
-**Upotreba:** kada smo sigurni da imamo sve podatke o velikom broju (najjačih) konfaundera.
+**Backdoor Kriterijum.** Pravilo o pronalaženju skupa varijabli za stratifikaciju kako bi dobili $P(Y|do(X))$. Može se upotrebiti kada se dijagram analizira vizuelno. **Metod:** Procena artimetičke sredine efekta u svakom stratumu. Onda weighted average svakog stratuma prema prevalenci u populaciji @fig-backdoor.
 
-**Metod:** Procena artimetičke sredine efekta u svakom stratumu. Onda weighted average svakog stratuma prema prevalenci u populaciji.
+::: { .callout-note}
+
+**Upotreba:** kada smo sigurni da imamo sve podatke o velikom broju (najuticajnijih) konfaundera.
+
 :::
+
+## Frontdoor Kriterijum
+
+:::: {.columns}
+
+::: {.column width="45%"}
+
+```{mermaid}
+%%| label: fig-frontdoor-1
+%%| fig-cap: "Something."
+
+flowchart LR
+  Z((Infarkt Gen)) -.-> X & Y
+  X((Lek)) ==> M((Krvni Pritisak)) 
+  M ==> Y((Infarkt))
+  
+```
+
+:::
+
+::: {.column width="10%"}
+:::
+
+::: {.column width="45%"}
+
+```{mermaid}
+%%| label: fig-frontdoor-2
+%%| fig-cap: "Something."
+
+flowchart LR
+  Z((Infarkt Gen)) -.-> X & Y
+  Z x-.-x M
+  X((Lek)) ==> M((Krvni Pritisak)) 
+  M ==> Y((Infarkt))
+  
+```
+:::
+
+::::
+
+Recimo da radimo opservacionu studiju, ali ne možemo da prikupimo podatke o genu podložnosti ka infarktu (možda ne znamo da takav postoji). Ono što jesmo prikupili su podaci o `Leku`, `Krvnom Pritisku` i `Infarktu`. Ne možemo da iskoristimo backdoor kriterijum jer nemamo podatke o `Infarkt Genu`. Možemo upotrebiti frontdoor kriterijum.
+
+Ono što možemo da procenimo je efekat `Leka` na `Krvni pritisak`. Za to nam ne treba nikakav adjustment. Samo možemo da uočimo da je $P(\text{Krvni Pritisak}\,|\,\text{Lek})$ i $P(\text{Krvni Pritisak}\,|\,\text{Bez Leka})$, i razlika između njih će biti prosečan efekat `Leka` na `Krvni Pritisak`.
+
+Takođe, @fig-frontdoor-1 pokazuje da možemo da procenimo kauzalni efekat Krvnog Pritiska na Infarkt. Tu možemo da iskoristimo backdoor kriterijum da blokiramo efekat `Leka` na `Krvni Pritisak`. Tako ćemo dobiti $P(\text{Infarkt}\,|\,do\text{(Lek)})$ i $P(\text{Infarkt}\,|\,do\text{(Bez Leka)})$.
+
+Time smo saznali prosečan efekat `Leka` na `Krvni Pritisak` i prosečan efekat `Krvnog Pritiska` na `Infarkt`. Kombinacijom ova dva efekta možemo posrednim putem da dobijemo efekat `Leka` na `Infarkt` izuzetog od genetskog uticaja `Infarkt Gena`.
+
+::: { .callout-note}
+Proces izražavanja $P(\text{Infarkt}\,|\,do\text{(Lek)})$ preko do-free verovatnoća se zove Frontdoor kriterijum.
+:::
+
+::: {.callout-note}
+**Upotreba:** Frontdoor kriterijum treba tražiti kad god ne možemo da uklonimo uticaj konfaundera Backdoor kriterijumom. U tom slučaju nam je potrebna medijatorska varijabla *zaštićena* od uticaja konfaundera (uporediti dijagrame @fig-frontdoor-1 i @fig-frontdoor-2).
+:::
+
+# Dr Džon Snou i prva instrumentalna varijabla
+
+:::: {.columns}
+
+::: {.column width="50%"}
+
+Džon Snou je imao brilijatnu ideju da posmatra kompanije koje snabdevaju ljude vodom u Londonu. Instrumentalna varijabla ima tri bitne karakteristike:
+
+- Nema strelice od Mijazme do Kompanije
+- Postoji strelica od Kompanije do Cistoce vode
+- Nema strelice od Kompanije do Kolere
+:::
+
+::: {.column width="50%"}
+
+![Dr Džon Snou](johnsnow.jpg){#fig-john width=60%}
+
+:::
+
+::::
+
+Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+
+$b = \frac{ \sf{r_{CWC}}} {\sf{r_{WWC}}}$ je dobijeno iz $\frac{ab} {a}$.
+
+### Namera lečenja
+
+Namera je instrumentalna varijabla.
+
+::: {.callout-note}
+Monotonicity: nije bilo pacijenata koji su dodaljeni grupi koja *ne* dobija Lek (Z = 0), a da su nekako ipak dobili lek (X = 1).
+:::
+
+
+```{mermaid}
+%%| label: fig-instrumental
+%%| fig-cap: "Something."
+
+flowchart LR
+  M(Mijazma, Siromaštvo,...) -.-> W & C
+  W(Čistoća Vode) ==>|b| C(Kolera)
+  WC(Kompanija) ==>|a| W
+  
+  
+```
 
 # Bajesova teorema
 
-$$P(\theta\\\textbf{D}) = P(\theta ) \frac{P(\textbf{D} \\\theta)}{P(\textbf{D})}$$
+$$P(\theta|\textbf{D}) = \frac{ P(\theta ) P(\textbf{D} | \\\theta)}{P(\textbf{D})}$$
 
 # Zaključak
 
