kauzalno-zakljucivanje: introduction

--- a/myblog/posts/sr/kauzalno-zakljucivanje/biblio.bib
+++ b/myblog/posts/sr/kauzalno-zakljucivanje/biblio.bib
@@ -10,3 +10,36 @@
 	address = {New York},
 	langid = {English}
 }
+
+@article{hernán2018,
+	title = {The C-Word: Scientific Euphemisms Do Not Improve Causal Inference From Observational Data},
+	author = {{Hernán}, Miguel A.},
+	year = {2018},
+	month = {05},
+	date = {2018-05},
+	journal = {American Journal of Public Health},
+	pages = {616--619},
+	volume = {108},
+	number = {5},
+	doi = {10.2105/AJPH.2018.304337},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5888052/},
+	note = {PMID: 29565659
+PMCID: PMC5888052}
+}
+
+@article{lazebnik2002,
+	title = {Can a biologist fix a radio?{\textemdash}Or, what I learned while studying apoptosis},
+	author = {Lazebnik, Yuri},
+	year = {2002},
+	month = {09},
+	date = {2002-09-01},
+	journal = {Cancer Cell},
+	pages = {179--182},
+	volume = {2},
+	number = {3},
+	doi = {10.1016/S1535-6108(02)00133-2},
+	url = {https://www.cell.com/cancer-cell/abstract/S1535-6108(02)00133-2},
+	note = {Publisher: Elsevier
+PMID: 12242150},
+	langid = {English}
+}
